--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>모든 책 조회 페이지</title>
   <link rel="stylesheet" href="/css/searchBookPage/searchBook.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
 </head>
 
 <body>
@@ -25,26 +23,26 @@
     <div id="checkboxCategory" class="checkbox-category">
         <!-- 4x5 체크박스 그리드 -->
         <div class="checkbox-categoryList">
-            <label><input type="checkbox" value="Option 1"> Option 1</label>
-            <label><input type="checkbox" value="Option 2"> Option 2</label>
-            <label><input type="checkbox" value="Option 3"> Option 3</label>
-            <label><input type="checkbox" value="Option 4"> Option 4</label>
-            <label><input type="checkbox" value="Option 5"> Option 5</label>
-            <label><input type="checkbox" value="Option 6"> Option 6</label>
-            <label><input type="checkbox" value="Option 7"> Option 7</label>
-            <label><input type="checkbox" value="Option 8"> Option 8</label>
-            <label><input type="checkbox" value="Option 9"> Option 9</label>
-            <label><input type="checkbox" value="Option 10"> Option 10</label>
-            <label><input type="checkbox" value="Option 11"> Option 11</label>
-            <label><input type="checkbox" value="Option 12"> Option 12</label>
-            <label><input type="checkbox" value="Option 13"> Option 13</label>
-            <label><input type="checkbox" value="Option 14"> Option 14</label>
-            <label><input type="checkbox" value="Option 15"> Option 15</label>
-            <label><input type="checkbox" value="Option 16"> Option 16</label>
-            <label><input type="checkbox" value="Option 17"> Option 17</label>
-            <label><input type="checkbox" value="Option 18"> Option 18</label>
-            <label><input type="checkbox" value="Option 19"> Option 19</label>
-            <label><input type="checkbox" value="Option 20"> Option 20</label>
+            <label><input type="checkbox" value="소설">소설</label>
+            <label><input type="checkbox" value="비문학">비문학</label>
+            <label><input type="checkbox" value="역사">역사</label>
+            <label><input type="checkbox" value="과학">과학</label>
+            <label><input type="checkbox" value="자기개발">자기개발</label>
+            <label><input type="checkbox" value="판타지">판타지</label>
+            <label><input type="checkbox" value="미스터리">미스터리</label>
+            <label><input type="checkbox" value="철학">철학</label>
+            <label><input type="checkbox" value="문학">value</label>
+            <label><input type="checkbox" value="예술">예술</label>
+            <label><input type="checkbox" value="고전">고전</label>
+            <label><input type="checkbox" value="심리학">심리학</label>
+            <label><input type="checkbox" value="경제경영">경제경영</label>
+            <label><input type="checkbox" value="정치">정치</label>
+            <label><input type="checkbox" value="여행">여행</label>
+            <label><input type="checkbox" value="수필">수필</label>
+            <label><input type="checkbox" value="종교">종교</label>
+            <label><input type="checkbox" value="교육">교육</label>
+            <label><input type="checkbox" value="스포츠">스포츠</label>
+            <label><input type="checkbox" value="요리">요리</label>
         </div>
     </div>
     
@@ -55,27 +53,27 @@
 <!-- Preference 체크박스 창 (기본적으로 숨김) -->
 <div id="checkboxPreference" class="checkbox-category">
     <!-- 4x5 체크박스 그리드 -->
-    <div class="checkbox-categoryList">
-        <label><input type="checkbox" value="Preference 1"> Preference 1</label>
-        <label><input type="checkbox" value="Preference 2"> Preference 2</label>
-        <label><input type="checkbox" value="Preference 3"> Preference 3</label>
-        <label><input type="checkbox" value="Preference 4"> Preference 4</label>
-        <label><input type="checkbox" value="Preference 5"> Preference 5</label>
-        <label><input type="checkbox" value="Preference 6"> Preference 6</label>
-        <label><input type="checkbox" value="Preference 7"> Preference 7</label>
-        <label><input type="checkbox" value="Preference 8"> Preference 8</label>
-        <label><input type="checkbox" value="Preference 9"> Preference 9</label>
-        <label><input type="checkbox" value="Preference 10"> Preference 10</label>
-        <label><input type="checkbox" value="Preference 11"> Preference 11</label>
-        <label><input type="checkbox" value="Preference 12"> Preference 12</label>
-        <label><input type="checkbox" value="Preference 13"> Preference 13</label>
-        <label><input type="checkbox" value="Preference 14"> Preference 14</label>
-        <label><input type="checkbox" value="Preference 15"> Preference 15</label>
-        <label><input type="checkbox" value="Preference 16"> Preference 16</label>
-        <label><input type="checkbox" value="Preference 17"> Preference 17</label>
-        <label><input type="checkbox" value="Preference 18"> Preference 18</label>
-        <label><input type="checkbox" value="Preference 19"> Preference 19</label>
-        <label><input type="checkbox" value="Preference 20"> Preference 20</label>
+    <div class="checkbox-preferenceList">
+        <label><input type="checkbox" value="감성적">감성적</label>
+        <label><input type="checkbox" value="철학적">철학적</label>
+        <label><input type="checkbox" value="심리학적">심리학적</label>
+        <label><input type="checkbox" value="모험">모험</label>
+        <label><input type="checkbox" value="스릴">스릴</label>
+        <label><input type="checkbox" value="논리적">논리적</label>
+        <label><input type="checkbox" value="서정적">서정적</label>
+        <label><input type="checkbox" value="지적">지적</label>
+        <label><input type="checkbox" value="분석적">분석적</label>
+        <label><input type="checkbox" value="영감을 주는">영감을 주는</label>
+        <label><input type="checkbox" value="휴식과 치유">휴식과 치유</label>
+        <label><input type="checkbox" value="현실적">현실적</label>
+        <label><input type="checkbox" value="공상적">공상적</label>
+        <label><input type="checkbox" value="사회적">사회적</label>
+        <label><input type="checkbox" value="연애">연애</label>
+        <label><input type="checkbox" value="가족">가족</label>
+        <label><input type="checkbox" value="도전적">도전적</label>
+        <label><input type="checkbox" value="코믹한">코믹한</label>
+        <label><input type="checkbox" value="추리적">추리적</label>
+        <label><input type="checkbox" value="예술적">예술적</label>
     </div>
 </div>
 
@@ -83,7 +81,7 @@
  
  
 
-    <form action="/addCheckedBooks" method="post" id="bookForm">
+    <form action="/addBooks" method="PUT" id="bookForm">
 
       <div class="search-result-container">
         <div class="search-result">
@@ -106,29 +104,39 @@
 
       <div th:each="book : ${allBook}" class="book-item">
         <div>
-          <input type="checkbox" th:value="${book.bookNo}" class="book-checkbox" id="bookCheckbox">
+            <!-- bookNo를 input 요소의 value로 저장해둠 -->
+            <input type="checkbox" th:value="${book.bookNo}" class="book-checkbox" id="bookCheckbox">
         </div>
         <a th:href="@{/searchBookPage/bookDetail/{bookNo}(bookNo=${book.bookNo})}">
-          <div class="book-item-image">
-            <img th:src="${book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="책 이미지">
-          </div>
-          <div class="book-item-details">
-            <div class="book-item-info">
-              <p><strong>제목:</strong> <span th:text="${book.bookTitle}">책 제목</span></p>
-              <p><strong>지은이:</strong> <span th:text="${book.bookWriter}">지은이</span></p>
-              <p><strong>출판사:</strong> <span th:text="${book.companyName}">출판사</span></p>
-              <p><strong>옮긴이:</strong> <span th:text="${book.bookTalt}">옮긴이</span></p>
-              <p><strong>가격:</strong> <span th:text="${book.bookPrice}">0</span>원</p>
-              <p><strong>출간일:</strong> <span th:text="${book.bookDate.substring(0, 10)}">출간일</span></p>
+            <div class="book-item-image">
+                <img th:src="${book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="책 이미지">
             </div>
-          </div>
+            <div class="book-item-details">
+                <div class="book-item-info">
+                    <!-- 책 제목을 찾기 위해 제목에 book-title 클래스를 추가 -->
+                    <p><strong>제목:</strong> <span class="book-title" th:text="${book.bookTitle}">책 제목</span></p>
+                    <p><strong>지은이:</strong> <span th:text="${book.bookWriter}">지은이</span></p>
+                    <p><strong>출판사:</strong> <span th:text="${book.companyName}">출판사</span></p>
+                    <p><strong>옮긴이:</strong> <span th:text="${book.bookTalt}">옮긴이</span></p>
+                    <p><strong>가격:</strong> <span th:text="${book.bookPrice}">0</span>원</p>
+                    <p><strong>출간일:</strong> <span th:text="${book.bookDate.substring(0, 10)}">출간일</span></p>
+                </div>
+            </div>
         </a>
         <div class="book-item-actions">
-          <label class="buttonBag" ><button id="addToCart">장바구니</button></label>
-          <label class="buttonWish"><button id="addToWishList">찜</button></label>
-          <label class="buttonBuy"><button id="buyNow">바로구매</button></label>
+            <!-- 장바구니 버튼 클릭 시 singleCartBtn(this) 호출 -->
+            <label class="buttonBag">
+                <button type="button" onclick="singleCartBtn(this)">장바구니</button>
+            </label>
+            <label class="buttonWish">
+                <button id="addToWishList">찜</button>
+            </label>
+            <label class="buttonBuy">
+                <button id="buyNow">바로구매</button>
+            </label>
         </div>
-      </div>
+    </div>
+    
     </form>
   </main>
   <footer th:replace="~{common/footer :: footer}"></footer>
