--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -44,18 +44,18 @@
                     <form>
                         <div class="form-floating mb-3">
                             <input type="text" name="memberId" class="form-control rounded-3" id="floatingInput"
-                                placeholder="아이디를 입력하세요.">
+                                placeholder="아이디를 입력하세요." autocomplete="current-password">
                             <label for="floatingInput">아이디를 입력해주세요.</label>
                         </div>
                         <div class="form-floating mb-3">
                             <input type="password" name="memberPw" class="form-control rounded-3" id="floatingPassword"
-                                placeholder="Password">
+                                placeholder="Password" autocomplete="current-password">
                             <label for="floatingPassword">비밀번호를 입력해주세요</label>
                         </div>
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">로그인</button>
                     </form>
                     <hr class="my-4">
-                    <a href="signUp" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
+                    <a href="member/signUp" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
                         회원가입
                     </a>
                     <a href="findId" class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
