--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -5,45 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>결제 페이지</title>
   <link rel="stylesheet" href="/css/order/order.css">
+  <!-- 결제 -->
   <script src="https://cdn.portone.io/v2/browser-sdk.js"></script>
+
+  <!-- 주소 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <header th:replace="~{common/common}"></header>
   <main class="orderMain">
-    <section class="addressSection">
-      <div>
-        <h2>주문/결제</h2>
-        <div class="basicAddress">
-          <p>기본 배송지를 등록해주세요</p>
-          <button onclick="registerAddress()">배송지 입력</button>
+
+    <form action="signUp" method="POST" name="signUpForm" id="signUpForm" class="needs-validation mx-auto mt-4" style="width: 60%;" novalidate>
+  
+      <!-- 주소 입력란, 주소 찾기 버튼 -->
+      <div class="form-floating row g-3 mb-2 mt-2 position-relative">
+        <div class="col-3 d-flex align-items-center justify-content-center" style="font-weight: bold;">
+          * 주소 입력란 (기본 배송지)
+        </div>
+        <div class="col-auto d-flex align-items-center justify-content-center">
+          <button type="button" id="addressFindBtn" class="btn btn-secondary" onclick="findAddress()">주소 찾기</button>
+          <button type="button" id="addressChangeBtn" class="btn btn-danger"  onclick="changeAddress();" style="display: none;">주소 삭제하기</button>
         </div>
       </div>
-    </section>
+  
+      <!-- 우편번호, 주소, 상세 주소 입력 -->
+      <div class="form-floating mb-2 mt-2 position-relative">
+        <input type="text" class="form-control" id="zip" name="zip" placeholder="" readonly>
+        <label for="zip">우편번호</label>
+      </div>
+      <div class="form-floating mb-2 mt-2 position-relative">
+        <input type="text" class="form-control" id="address" name="address" placeholder="" readonly>
+        <label for="address">주소</label>
+      </div>
+      <div class="form-floating mb-2 mt-2 position-relative">
+        <input type="text" class="form-control" id="detailAddress" name="detailAddress" maxlength="50" autocomplete="off" placeholder="" readonly>
+        <label for="detailAddress">상세 주소</label>
+        <button type="button" id="detailAddressClearBtn" class="btn-close clear-btn" onclick="clearInput('detailAddress')"
+          aria-label="Clear"></button>
+      </div>
+  
+      <button type="submit" id="submitBtn" class="btn btn-success w-100">주소 변경</button>
+    </form>
 
-    <h4>주문 상품 목록</h4>
-    <table>
-      <thead>
-        <tr>
-          <th>상품명</th>
-          <th>수량</th>
-          <th>가격</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr th:each="item : ${orderItems}">
-          <td th:text="${item.bookTitle}">상품명</td>
-          <td th:text="${item.cartCount}">수량</td>
-          <td>
-            <span th:text="${item.bookPrice * item.cartCount} + ' 원'"></span>
-          </td>
-          <td>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <h3>
-      <span class="delivery-fee" th:text="'배송비: ' + ${deliveryFee} + ' 원'"></span>
-    </h3>
+  <h4>주문 상품 목록</h4>
+  <table>
+    <thead>
+      <tr>
+        <th></th>
+        <th>상품명</th>
+        <th>수량</th>
+        <th>가격</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr th:each="item : ${orderItems}">
+        <td>
+          <img th:src="${item.bookCover != null ? item.bookCover : '/images/bookCover/default.jpg'}" alt="Book Cover" class="book-cover">
+          책 이미지
+        </td>
+        <td th:text="${item.bookTitle}">상품명</td>
+        <td th:text="${item.cartCount}">수량</td>
+        <td>
+          <span class="book-price" 
+            data-price="${item.bookPrice * item.cartCount}" 
+            th:text="${item.bookPrice * item.cartCount}">
+          </span>
+        </td>
+        <td>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <h3>
+    <span class="delivery-fee" data-fee="${deliveryFee}" th:text="${deliveryFee}"></span>
+  </h3>
+    
    
     <h3>총 결제 금액: 
       <span id="totalPriceElement" th:text="${totalPrice + deliveryFee} + ' 원'"></span>
@@ -60,10 +96,10 @@
 
       PortOne.requestPayment({
         storeId: "store-e4038486-8d83-41a5-acf1-844a009e0d94",
-        paymentId: "testm3mr3luo2d",
+        paymentId: "testm3mr3luo2da",
         orderName: "테스트 결제",
         // 테스트 결제 시
-        totalAmount: 100,
+        totalAmount: 10,
         // 실제 결제 시
         // totalAmount: totalAmount, 
         currency: "KRW",
@@ -83,5 +119,11 @@
       });
     }
   </script>
+
+  <script src="/js/order/order.js"></script>
+
+  <!-- 다음 주소 API -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </body>
 </html>
