--- a/src/main/resources/templates/admin/faq.html
+++ b/src/main/resources/templates/admin/faq.html
@@ -92,7 +92,7 @@
   
     <div class="content">
       <h2>FAQ 관리</h2>
-      <select class="sortSelect">
+      <select name="key" class="sortSelect">
         <option value="all">전체보기</option>
         <option value="Y">노출</option>
         <option value="N">비노출</option>
@@ -116,13 +116,13 @@
         </thead>
 
         <tbody class="faqContent"> 
-          <th:block th:if= "${#list.isEmpty(faqList)}">
+          <th:block th:if= "${#lists.isEmpty(faqList)}">
             <tr>
               <th colspan="5">FAQ로 등록된 자료가 없습니다.</th>
             </tr>
           </th:block>
 
-          <th:block th:unless="${#list.isEmpty(faqList)}">
+          <th:block th:unless="${#lists.isEmpty(faqList)}">
             <tr th:each= "faq:${faqList}"
                 th:object="${faq}">  
               
@@ -133,10 +133,10 @@
               <td th:text="*{faqId}">
                 FAQ 번호
               </td>
-              <td th:text="*{title}">
+              <td th:text="*{question}">
                 어떻게 새로운 1:1 문의를 등록하나요?
               </td>
-              <td th:text="*{content}">
+              <td th:text="*{answer}">
                 1:1 문의를 등록하려면 고객센터 페이지의 "1:1 문의하기" 버튼을 클릭하세요. 등록 양식을 작성한 후 "등록" 버튼을 누르면 문의가 접수됩니다. 접수된 문의는 마이페이지에서 확인 가능합니다.
               </td>
               <td th:text="*{faqYn}">
