--- a/src/main/resources/templates/admin/faq.html
+++ b/src/main/resources/templates/admin/faq.html
@@ -37,8 +37,9 @@
       
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div>
-          담당
+        <div th:each= "faq:${faqList}"
+             th:text="${faq.faqId}">
+             name
         </div>
       </div>
   
@@ -97,15 +98,17 @@
         <option value="Y">노출</option>
         <option value="N">비노출</option>
       </select>
-      <button>전체 선택 해제</button>
-      <button>선택한 내용 상태 변경</button>
-      <button>선택한 내용 삭제</button>
+      <button id="all">전체 선택 해제</button>
+      <button id="selectUpdate">선택한 내용 상태 변경</button>
+      <button id="selectDelete">선택한 내용 삭제</button>
+
+
     
       <table class="faq-box">
         <thead class="faq">
           <tr>
             <th class="checkbox">
-              <input type="checkbox">
+              <input type="checkbox" id="allSelectBtn"></input> 
             </th>
             <th class="faqNo">글 번호</th>
             <th class="title">제목</th>
@@ -127,77 +130,94 @@
                 th:object="${faq}">  
               
               <td>
-                <input type="checkbox" id="selectFaq">
+                <input type="checkbox" id="selectFaq" th:value="*{faqId}" >
               </td>
 
-              <td th:text="*{faqId}">
+              <td th:text="*{faqId}" th:name="*{faqId}">
                 FAQ 번호
               </td>
-              <td th:text="*{question}">
+              <td th:text="*{title}">
                 어떻게 새로운 1:1 문의를 등록하나요?
               </td>
-              <td th:text="*{answer}">
+              <td th:text="*{content}">
                 1:1 문의를 등록하려면 고객센터 페이지의 "1:1 문의하기" 버튼을 클릭하세요. 등록 양식을 작성한 후 "등록" 버튼을 누르면 문의가 접수됩니다. 접수된 문의는 마이페이지에서 확인 가능합니다.
               </td>
               <td th:text="*{faqYn}">
                 N
               </td>
               <td>
-                <button class="updateBtn">노출 상태 변경</button>
+                <button class="updateBtn">
+                  노출 상태 변경<input type="text" th:value="*{faqId}" class="updateId" hidden>
+                </button>
+                
               </td>
             </tr>
           </th:block>
         </tbody>
       </table>
 
+      
+      <div class="pagination-area" th:unless= "${#lists.isEmpty(faqList)}">
+        
+        <ul class="pagination" th:object="${pagination}">
+          
+          <!-- 첫 페이지로 이동 -->
+          <li><a href="#">&lt;&lt;</a></li>
+          
+          <!-- 이전 목록 마지막 번호로 이동 -->
+          <li><a href="#">&lt;</a></li>
+          
+          <!-- 특정 페이지로 이동 -->
+          
+          <!-- 
+            #numbers.sequence(startPage, endPage)
+            -> startPage부터 endPage까지 1씩 증가하는 숫자를 가진
+            List를 만들어서 반환
+          -->
+          <th:block th:each= "i : *{#numbers.sequence(startPage, endPage)}">
+            
+            <!-- 현재 보고있는 페이지 -->
+            <li th:if= "${i}==*{currentPage}">
+              <a class="current" th:text="${i}">현재 페이지</a>
+            </li>
+            
+            <!-- 보고있지 않은 페이지 -->                    
+            <li th:unless = "${i} == *{currentPage}">
+              <a href="#" th:text="${i}">이동할 수 있는 페이지</a>
+            </li>
+            
+            
+          </th:block>
+          
+          <!-- 다음 목록 시작 번호로 이동 -->
+          <li><a href="#">&gt;</a></li>
+          
+          <!-- 끝 페이지로 이동 -->
+          <li><a href="#">&gt;&gt;</a></li>
+        </ul>
+      </div>
+
       <div class="btn-area">
         <!-- 로그인 상태일 때만 글쓰기 버튼 노출 -->
         <button th:if= "${session.loginMember}"
         id="insertBtn">글쓰기</button>                     
       </div>
+  
+      <div id="addPopupLayer" class="popup-layer-close">
+        <div class="input-area">
+          제목 <input type="text" id="inputTitle" name="title" placeholder="제목을 입력하세요" autocomplete="off">
+          내용 <input type="text" id="inputContent" name="content" placeholder="내용을 입력하세요" autocomplete="off"></input>
+        </div>
+  
+  
+        <button id="addFaqBtn">등록하기</button>
+        <button id="back">돌아가기</button>
+      </div>
 
-      <div class="pagination-area" th:unless= "${#lists.isEmpty(boardList)}">
-
-        <ul class="pagination" th:object="${pagination}">
-        
-            <!-- 첫 페이지로 이동 -->
-            <li><a href="#">&lt;&lt;</a></li>
-
-            <!-- 이전 목록 마지막 번호로 이동 -->
-            <li><a href="#">&lt;</a></li>
-
-            <!-- 특정 페이지로 이동 -->
-            
-            <!-- 
-                #numbers.sequence(startPage, endPage)
-                -> startPage부터 endPage까지 1씩 증가하는 숫자를 가진
-                List를 만들어서 반환
-            -->
-            <th:block th:each= "i : *{#numbers.sequence(startPage, endPage)}">
-                
-                <!-- 현재 보고있는 페이지 -->
-                <li th:if= "${i}==*{currentPage}">
-                    <a class="current" th:text="${i}">현재 페이지</a>
-                </li>
-
-                <!-- 보고있지 않은 페이지 -->                    
-                <li th:unless = "${i} == *{currentPage}">
-                    <a href="#" th:text="${i}">이동할 수 있는 페이지</a>
-                </li>
-                
-                
-            </th:block>
-
-            <!-- 다음 목록 시작 번호로 이동 -->
-            <li><a href="#">&gt;</a></li>
-
-            <!-- 끝 페이지로 이동 -->
-            <li><a href="#">&gt;&gt;</a></li>
-        </ul>
     </div>
-    </div>
+    
   </section>
-
-<script src="/js/admin/faq.js"></script>
+ 
+  <script src="/js/admin/faq.js"></script>
 </body>
 </html>
