--- a/src/main/resources/templates/myPage/checkPw.html
+++ b/src/main/resources/templates/myPage/checkPw.html
@@ -1,68 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비밀번호 확인</title>
+    <title>비밀번호 확인 | Phantom Books</title>
     <link rel="stylesheet" href="/css/myPage/info.css">
+    <link rel="stylesheet" th:href="@{/css/myPage/myPageCommon.css}">
 </head>
 <body>
     <header th:replace="~{common/common}"></header>
 
     <main>
         <section class="content-box">
-            <!-- 사이드바 부분 -->
-            <div class="sideBar">
-              <div class="text-end mb-3">
-                <button id="openBtn" class="btn btn-primary">
-                  <i class="fa-solid fa-arrow-down-short-wide"></i>
-                </button>
-                <button id="closeBtn" class="btn btn-danger" style="display: none;">
-                  <i class="fa-solid fa-arrow-up-short-wide"></i>
-                </button>
-              </div>
-              <h3 class="menu">
-                <i class="fa-solid fa-users"></i>&nbsp;&nbsp;내 정보
-                <ul class="submenu">
-                  <li><a href="/myPage/info">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 정보 보기/변경</a></li>
-                  <li><a href="/myPage/changePw">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;비밀번호 변경</a></li>
-                  <li><a href="/myPage/preference">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향 보기</a></li>
-                  <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향으로 검색</a></li>
-                </ul>
-              </h3>
-      
-              <h3 class="menu">
-                <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;구매 및 배송
-                <ul class="submenu">
-                  <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;구매 내역 조회</a></li>
-                </ul>
-              </h3>
-      
-              <h3 class="menu">
-                <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;내 활동 내역
-                <ul class="submenu">
-                  <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 리뷰 목록</a></li>
-                  <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내가 찜한 목록</a></li>
-                </ul>
-              </h3>
-      
-              <h3 class="menu">
-                <i class="fa-solid fa-comments"></i>&nbsp;&nbsp;1:1 문의
-                <ul class="submenu">
-                  <li><a href="/customer/query">&nbsp;&nbsp;&nbsp;&nbsp;1:1 문의하기</a></li>
-                  <li><a href="/customer/inquiry">&nbsp;&nbsp;&nbsp;&nbsp;1:1 문의내역</a></li>
-                </ul>
-              </h3>
-      
-              <h3 class="menu">
-                <a href="/customer/qna" style="text-decoration: none; color:#333;"><i class="fa-solid fa-question-circle"></i>&nbsp;&nbsp;자주 묻는 질문(FAQ)</a>
-              </h3>
+          <div th:replace="~{myPage/sidebar :: sidebar}"></div>
           
-              <h3 class="menu">
-                <a href="/customer/notice" style="text-decoration: none; color:#333;"><i class="fa-solid fa-bullhorn"></i>&nbsp;&nbsp;공지사항</a>
-              </h3>
-            </div>
-
             <!-- 비밀번호 확인 폼 -->
             <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
                 <div class="row mb-3">
